[build-system]
requires = ["setuptools>=50", "setuptools_scm>=6"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
known_first_party = ["betteruptime"]

[tool.setuptools_scm]
write_to = "betteruptime/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true