[metadata]
name = betteruptime
description = Python client for BetterUptime API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cguillerminet/betteruptime-python
author = Cyril GUILLERMINET
author_email = cyril@guillerminet.com
maintainer = Cyril GUILLERMINET
maintainer_email = cyril@guillerminet.com
license = BSD
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = virtual, environments, isolated, testing
project_urls =
    Source=https://github.com/cguillerminet/betteruptime-python
    Tracker=https://github.com/cguillerminet/betteruptime-python/issues
    Changelog=https://github.com/cguillerminet/betteruptime-python/blob/main/CHANGELOG.md

[options]
packages = find:
install_requires =
    requests>=2.27.1
    tox>=4.0.0a10
python_requires = >=3.7
include_package_data = True
package_dir =
    =betteruptime
zip_safe = True

[options.packages.find]
where = betteruptime

[options.extras_require]
test =
    covdefaults>=2.2
    pytest>=7.1
    pytest-cov>=3
    pytest-mock>=3.7
    pytest-vcr>=1.0.2

[options.package_data]
tox_gh = py.typed
